public interface IMenu
{
    void enter(Application application);
    void exit(Application application);
}
